--- a/app-init/group_vars/all.yml
+++ b/app-init/group_vars/all.yml
@@ -1,6 +1,7 @@
 ---
 ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
 #ansible_python_interpreter: "/usr/bin/python3"
-ansible_user: user_ansible
-ansible_password: password_user
-ansible_sudo_pass: password_root
+ansible_user: root
+ansible_user: root
+ansible_ssh_private_key_file: /root/.ssh/id_rsa
+
