--- a/app-template/group_vars/all.yml
+++ b/app-template/group_vars/all.yml
@@ -1,6 +1,7 @@
 ---
 ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
 ansible_python_interpreter: "/usr/bin/python3"
-ansible_user: <FIX IT> 
-ansible_password: <FIX IT>
-ansible_sudo_pass: <FIX IT>
+ansible_user: admin 
+ansible_password: admin
+ansible_sudo_pass: admin
+
