--- a/app-init/nginx_playbook.yaml
+++ b/app-init/nginx_playbook.yaml
@@ -1,68 +1,94 @@
 ---
-# YAML documents begin with the document separator ---
-
-# The minus in YAML this indicates a list item.  The playbook contains a list
-# of plays, with each play being a dictionary
--
-
-  # Hosts: where our play will run and options it will run with
-  hosts: prod
+- name: Deploy Webserver
+  hosts: webservers
   become: true
-  # Vars: variables that will apply to the play, on all target systems
-  vars_files:
-    - vars/logos.yaml
 
-  # Tasks: the list of tasks that will be executed within the play, this section
-  # can also be used for pre and post tasks
+  vars:
+    nginx_root_location: "/usr/share/nginx/html"
+
   tasks:
 
-    - name: Définir la variable nginx_root_location en fonction de la distribution
+    ### 1. Détecter la famille OS
+    - name: Set nginx root for RedHat
       set_fact:
         nginx_root_location: "/usr/share/nginx/html"
       when: ansible_os_family == "RedHat"
 
-    - name: Définir la variable nginx_root_location pour Ubuntu
+    - name: Set nginx root for Debian
       set_fact:
         nginx_root_location: "/var/www/html"
       when: ansible_os_family == "Debian"
-  
-    - name: Install EPEL
+
+
+    ### 2. Installer EPEL (CentOS)
+    - name: Install EPEL repository
       yum:
         name: epel-release
-        update_cache: yes
-        state: latest
-      when: ansible_distribution == 'CentOS'
+        state: present
+      when: ansible_os_family == "RedHat"
 
-    - name: Install Nginx
-      package:
+
+    ### 3. Ajouter dépôt officiel Nginx (CentOS)
+    - name: Add official Nginx repository
+      yum_repository:
+        name: nginx-stable
+        description: nginx stable repo
+        baseurl: http://nginx.org/packages/centos/$releasever/$basearch/
+        gpgcheck: no
+        enabled: yes
+      when: ansible_os_family == "RedHat"
+
+
+    ### 4. Installer nginx
+    - name: Install nginx
+      yum:
         name: nginx
         state: latest
+      when: ansible_os_family == "RedHat"
 
-    # ✅ Partie corrigée ici seulement
-    - name: Restart nginx
-      shell: systemctl restart nginx || nginx
 
-    - name: Template index.html-easter_egg.j2 to index.html on target
+    ### 5. Stop any running nginx (sans erreur)
+    - name: Kill any running nginx
+      shell: pkill -f nginx
+      failed_when: false   # 🔥 empêche l'erreur inutile
+      ignore_errors: yes   # 🔥 accepte pkill même si nginx n'est pas lancé
+
+
+    ### 6. Start nginx manuellement
+    - name: Start nginx manually
+      shell: nginx
+      failed_when: false
+
+
+    ### 7. Enable nginx au boot (CentOS)
+    - name: Enable nginx at boot (rc.local hack)
+      shell: echo "nginx" >> /etc/rc.local
+      args:
+        executable: /bin/bash
+      when: ansible_os_family == "RedHat"
+
+
+    ### 8. Déployer index.html (depuis templates/)
+    - name: Deploy index.html
       template:
         src: index.html-easter_egg.j2
         dest: "{{ nginx_root_location }}/index.html"
         mode: 0644
 
+
+    ### 9. Installer unzip
     - name: Install unzip
       package:
         name: unzip
         state: latest
 
-    - name: Unarchive playbook stacker game
+
+    ### 10. Extraire le jeu stacker
+    - name: Extract stacker game
       unarchive:
-        src: playbook_stacker.zip
+        src: "files/playbook_stacker.zip"   # 🔥 chemin CORRIGÉ
         dest: "{{ nginx_root_location }}"
+        remote_src: no
         mode: 0755
 
-  # Handlers: the list of handlers that are executed as a notify key from a task
-  handlers:
-    - name: Check HTTP Service
-      uri:
-        url: http://{{ ansible_default_ipv4.address }}
-        status_code: 200
 
